--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     />
   </head>
   <body>
+    <header>
+      <nav id="nav-bar">
+        <a id="blog" href="blog.html" target="_blank">Blogs</a>
+      </nav>
+    </header>
+
     <h1 class="title"><img src="./logo.png" /></h1>
     <div id="show-time">0 seconds</div>
 
