--- a/index.html
+++ b/index.html
@@ -16,33 +16,35 @@
   <body>
     <header>
       <nav id="nav-bar">
+        <h1 class="title"><img src="./logo.png" /></h1>
         <a id="blog" href="blog.html" target="_blank">Blogs</a>
       </nav>
     </header>
 
-    <h1 class="title"><img src="./logo.png" /></h1>
-    <div id="show-time">0 seconds</div>
+    <main>
+      <div id="show-time">0 seconds</div>
 
-    <div class="box-container">
-      <div id="question"></div>
+      <div class="box-container">
+        <div id="question"></div>
 
-      <div id="display" class="inactive"></div>
+        <div id="display" class="inactive"></div>
 
-      <div class="buttons">
-        <button id="start">START</button>
+        <div class="buttons">
+          <button id="start">START</button>
+        </div>
+
+        <div class="divider-container">
+          <div class="line"></div>
+          <h1 class="title2">History</h1>
+          <div class="line"></div>
+        </div>
+        <div id="histories"></div>
       </div>
 
-      <div class="divider-container">
-        <div class="line"></div>
-        <h1 class="title2">History</h1>
-        <div class="line"></div>
-      </div>
-      <div id="histories"></div>
-    </div>
-
-    <div id="countdown"></div>
-    <div id="modal-background" class="hidden"></div>
-    <div id="result" class="hidden"></div>
+      <div id="countdown"></div>
+      <div id="modal-background" class="hidden"></div>
+      <div id="result" class="hidden"></div>
+    </main>
 
     <script src="./history.js"></script>
     <script src="./script.js"></script>
