--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="box-container">
         <div id="question"></div>
 
-        <div id="display" class="inactive"></div>
+        <div type="text" id="display" class="inactive"></div>
 
         <div class="buttons">
           <button id="start">START</button>
